// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Card disabled 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "blue",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": "blue",
              }
            }
          >
            ENABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={
                Object {
                  "backgroundColor": "blue",
                }
              }
            />
            <div
              className=""
              id="cursor"
              style={
                Object {
                  "transform": "translate3d(26px, 0, 0)",
                }
              }
            />
          </div>
        </div>
      </div>
      <h1>
        sometitle
      </h1>
    </div>
  </div>
</div>
`;

exports[`renders Card enabled 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "var(--grey2-color)",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": null,
              }
            }
          >
            DISABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={Object {}}
            />
            <div
              className=""
              id="cursor"
              style={Object {}}
            />
          </div>
        </div>
      </div>
      <h1>
        sometitle
      </h1>
    </div>
  </div>
</div>
`;

exports[`renders Card with a description 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "var(--grey2-color)",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": null,
              }
            }
          >
            DISABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={Object {}}
            />
            <div
              className=""
              id="cursor"
              style={Object {}}
            />
          </div>
        </div>
      </div>
      <h1>
        sometitle
      </h1>
      <p
        className="description"
      >
        some description
      </p>
    </div>
  </div>
</div>
`;

exports[`renders Card with a logo 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "var(--grey2-color)",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": null,
              }
            }
          >
            DISABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={Object {}}
            />
            <div
              className=""
              id="cursor"
              style={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <div
          id="logo"
          style={
            Object {
              "backgroundImage": "url(https://upload.wikimedia.org/wikipedia/commons/f/fd/Qwant-v3.png)",
              "backgroundPosition": "top center",
              "backgroundSize": "cover",
              "height": "16px",
              "marginRight": "4px",
              "width": "16px",
            }
          }
        />
        <h1>
          sometitle
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with an image 1`] = `
<div
  className="Card"
>
  <div
    className="image"
    style={
      Object {
        "backgroundImage": "url(https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb)",
        "filter": "grayscale(50%)",
      }
    }
  />
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "var(--grey2-color)",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": null,
              }
            }
          >
            DISABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={Object {}}
            />
            <div
              className=""
              id="cursor"
              style={Object {}}
            />
          </div>
        </div>
      </div>
      <h1>
        sometitle
      </h1>
    </div>
  </div>
</div>
`;
